// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render expesnes summary with 1 expense 1`] = `
<div>
  <h1>
    view 
    1
     
    expense
     total of 
    $2.35
  </h1>
</div>
`;

exports[`render expesnes summary with multiple expense 1`] = `
<div>
  <h1>
    view 
    23
     
    expenses
     total of 
    $32,412.12
  </h1>
</div>
`;
